♻️ refactor(Quiz): 테이블 구조 변경에 따른 Controller, Service, Repository 리팩토링 (#134)